# cbor42

./: .gitignore  Cargo.toml  README.md
src/: decode.rs  encode.rs  lib.rs
tests/: roundtrip.rs
