[package]
name = "libipld-raw-cbor"
version = "0.1.0"
authors = ["Rüdiger Klaehn", "David Craven <david@craven.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "ipld raw cbor codec"
repository = "https://github.com/rklaehn/libipld-raw-cbor"

[dependencies]
byteorder = "1.4.3"
libipld-core = "0.14.0"
thiserror = "1.0.25"

[dev-dependencies]
hex = "0.4.3"
libipld-macro = "0.14.0"
quickcheck = "1.0.3"
multihash = "0.16.3"
